2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* arch/mingw/grap2graph.cmd: Revise version info.
	- Drop "GNU" from reported version string; this is a contributed
	  program--its shell script equivalent is in contrib/
	  grap2graph--not a GNU program.
	- Bump reported version to 1.24.0.

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am ($(devpdffont_descriptions_from_devps)
	($(devpdffontencdata), font/devpdf/SS)
	($(devpdf_builddir)/symbolsl.afm)
	($(devpdf_builddir)/symbolsl.pfb, $(devpdffontmapdata)): Copy
	files with `cp -fp`, not just `cp -f`, preventing spurious
	rebuilds of these targets.

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am (all): Drop unnecessary phony target.

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am [HAVE_URW_FONTS]: Shift conditional so
	that we define a target rule for
	`$(devpdffont_descriptions_for_urw)` only if the
	`HAVE_URW_FONTS` Automake variable is defined.

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/devpdf.am ($(devpdffont_descriptions_for_urw)):
	Drop interpolations of no-longer-used `DEFAULT_BASE35_FONTS` and
	`URW_BASE35_FONTS` macros.

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/doc.am: Abstract "-P-e" option to gropdf into new macro,
	`groffmanpagesoption`.  We can't use it if the build is
	configured without URW fonts to embed, so define the macro only
	if `HAVE_URW_FONTS` _and_ `USE_GROPDF`.
	(doc/groff-man-pages.pdf): Interpolate macro instead of
	hard-coding "-P-e".

2026-01-26  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/tests/check-default-foundry.sh.in: Die with "hard
	error" if test script cannot locate the "Foundry" file.  Skip
	remainder of test (for fonts not in the PostScript Level 1/PDF
	"base 14") if the "URW" section of the "Foundry" file is absent.
